k8s/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uat
  name: waondo-transaction-service
  labels:
    name: waondo-transaction-service
    app: waondo-transaction-service
spec:
  selector:
    matchLabels:
      app: waondo-transaction-service
  template:
    metadata:
      name: waondo-transaction-service
      labels:
        name: waondo-transaction-service
        app: waondo-transaction-servicew  
    spec:
      containers:
        - name: waondo-transaction-service
          imagePullPolicy: Always
          image: silasonyango93/waondo-transaction-service:latest
          ports:
            - containerPort: 8080
