k8s/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: uat
  name: waondo-transaction-service
  annotations:
    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: transaction.waondosecondary.xyz
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: waondo-transaction-service
                port:
                  number: 8080
